# solov2-ncnn-android

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mbv2-64-doc2-1-op.param  pplcnet-sim-sim-opt-fp16.param
app/src/main/java/com/tencent/ncnnhair/: DemoThread.java  ImageActivity.java  MainActivity.java  NcnnHair.java  Test.java
app/src/main/jni/: CMakeLists.txt  nanodet.cpp  nanodet.h  nanodetncnn.cpp  ndkcamera.cpp  ndkcamera.h
app/src/main/res/layout/: activity_image.xml
app/src/main/res/values/: strings.xml
